#                                                                                          #
#                                      Changelog                                           #
#                                                                                          #
############################################################################################

[155] --> Update Sunwell Plateau by aedansilver.
[154] --> Fix - Don't Allow Vehicles in Arena by Demonid.
[153] --> Update Icecrown Citadel by aedansilver.
[152] --> Update Ulduar by aedansilver.
[151] --> Update ICC by Elron103.
[150] --> Update Trial of the Champion. (Thx Faq / sioa)
[149] --> Fix Sindragosa. [TEST] (By Elron103)
[148] --> Fix priest bug (kills and honour) spell_priest_spirit_of_redemption. (Thx Vitasic)
[147] --> Fix sacred shield CD. (TEST, By Odyssey & aedansilver)
[146] --> Fix duel reset cd and Bladestorm. (By iconskater) 
[145] --> Fix Sindragosa. (By Elron103) 
[144] --> Fix MMaps boss sindragosa and more... (Info #9083).
[143] --> Fix crash StopCastingCharm (TEST #9293). 
[142] --> Revert 'Fix Gargoyle haste (TEST).'
[141] --> Small correction arena logs.
[140] --> Hack-Fix Rune Strike. (By Juliean)
[139] --> Fix loot Halls of Reflection.
[138] --> Fix Blood Prince Council and Lord Marrowgar (Original script TC).
[137] --> Fix Lady Deathwhisper (Original script TC).
[136] --> SQL/Misc: Database reguid, cleanup files. (By Elron103)
[135] --> Fix loot Trial of Crusader.
[134] --> Fix Lich King.
[133] --> Fix loot Freya and Trial of Champion.
[132] --> Fix Sindragosa.
[131] --> Fix Instance Cooldown Exploit.
[130] --> Revert 'Misc fixes (TEST)...'.
[129] --> Revert 'Fix Blood Tap (TEST).'.
[128] --> Restore original scripts Sunwell Plateau.
[127] --> Fix Death and Decay.
[126] --> Fix Masters Call (53271).
[125] --> Fix Blood Tap (TEST).
[124] --> Misc fixes (TEST):
           - Fixed cinderglacier charge removal.